# django-weather

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
core/: settings.py  urls.py  views.py
static/: global.css
static/home/: index.css
static/weather/: history.css  index.css
templates/home/: index.html
templates/weather/: history.html  index.html
weather/: forms.py  models.py  services.py  settings.py  urls.py  views.py
weather/migrations/: 0001_initial.py
